Fix body height on mobile

--- a/fovcalc3.4.css
+++ b/fovcalc3.4.css
@@ -144,7 +144,7 @@ canvas {
     border: none;
     margin: 0;
     box-shadow: none;
-    height: 100%;
+    min-height: 100%;
   }
 
   h1 {
